# web_development

./: Dockerfile  pyproject.toml  requirements.txt
DEVELOPMENT/: app_errors.logs  app_info.logs  classes.py  cleaner_functions.py  exceptions_address_book.py  functions.py  game.py  illustration_to_game.py  logger.py  main.py
