[tool.poetry]
name = "development"
version = "0.1.0"
description = ""
authors = ["AntonHran <anton.hranovskyi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
aiofiles = "^23.1.0"
aioshutil = "^1.3"
aiopath = "^0.6.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
